@@ -45,6 +45,7 @@
 - Fix: [#16063] Object Selection preview for objects with glass is broken.
 - Fix: [#16075] Exporting track designs saves scenery in incorrect locations.
 - Fix: [#16087] The Looping Roller Coaster booster is now always drawn correctly.
+- Fix: [#16140] The 'Follow this' option is now disabled when the ride view is set to 'overall' or a station.
 - Fix: [#16162] Go Karts speeds are not correctly randomised, they only go very fast or very slow.
 - Fix: [#16188] Medium-size banked turns on the Twister and Vertical Roller Coaster have incorrect support placement (partly original bug).
 - Fix: [#16264, #16572] Placing saved track design crashes game.
